# spotify-visualizer

./: README.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/src/: app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: image_generation.rs  main.rs  models.rs  spotify_repository.rs
frontend/src/lib/: model.ts
frontend/src/lib/components/: CurrentlyPlayingSideBar.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
